Add donkey and pohjavirta